create startup database

--- a/dirup-empresa-admin-api/Properties/launchSettings.json
+++ b/dirup-empresa-admin-api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "dirup_empresa_admin_api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
