--- a/dirup-empresa-admin-api/appsettings.Development.json
+++ b/dirup-empresa-admin-api/appsettings.Development.json
@@ -11,5 +11,9 @@
   },
   "ConnectionStrings": {
     "Default": "Server=127.0.0.1; Port=33061; Database=disrup; Uid=user; Pwd=root;"
+  },
+  "ElasticsearchSettings": {
+    "Url": "http://localhost:9200",
+    "IndexName": "company_index"
   }
 }
