--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,17 @@ services:
       - "33061:3306"
     networks:
       - disrup
+  
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+    ports:
+      - 9200:9200
+      - 9300:9300
+    volumes:
+      - ./data:/usr/share/elasticsearch/data
 
 networks:
   disrup:
